Add egghead links

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -17,6 +17,7 @@ Especially things that blur the lines between design and development. I 🖤 com
 - [Styled System][sys]
 - [Random A11y][rand]
 - [CSS Stats][css]
+- [egghead lessons][egghead]
 - [... and other stuff][gh]
 
 [gh]: https://github.com/johno
@@ -29,3 +30,4 @@ Especially things that blur the lines between design and development. I 🖤 com
 [std]: https://github.com/standard-components
 [rand]: https://github.com/johno/random-a11y
 [css]: https://cssstats.com
+[egghead]: https://egghead.io/instructors/john-otander
