--- a/pages/videos.mdx
+++ b/pages/videos.mdx
@@ -9,3 +9,7 @@ code from old projects or `console.log` debugging. They're
 unedited and full of me mumbling.
 
 - [Building randoma11y, a color voting app](https://www.youtube.com/watch?v=garQJiJUxwk)
+
+---
+
+I've begun teaching on egghead as well! [Check out my lessons &rarr;](https://egghead.io/instructors/john-otander)
