--- a/pages/videos.mdx
+++ b/pages/videos.mdx
@@ -8,6 +8,7 @@ It's meant to illustrate the unglamorous, like copy/pasting
 code from old projects or `console.log` debugging. They're
 unedited and full of me mumbling.
 
+- [Building the first Iterative Ship landing page](https://www.youtube.com/watch?v=zwsVzpU01qA)
 - [Building randoma11y, a color voting app](https://www.youtube.com/watch?v=garQJiJUxwk)
 
 ---
