Add unified handbook link

--- a/pages/writing.mdx
+++ b/pages/writing.mdx
@@ -13,6 +13,7 @@ usually it's technical.
 
 ## Technical
 
+- [unified handbook - Primer on the unified ecosystem, ASTs, and compilers](https://github.com/unifiedjs/handbook)
 - [React Hooks and stale state](/react-hooks-stale-state)
 - [Generating code and the webpack loader](/generating-code-webpack-loader)
 - [Extending Gatsby plugins](/extending-gatsby-plugins)
