Add new post to curated list

--- a/pages/writing.mdx
+++ b/pages/writing.mdx
@@ -8,6 +8,7 @@ usually it's technical.
 - [Latent Component Shadowing](/latent-component-shadowing)
 - [Guessable](/guessable)
 - [Authorable format](/authorable-format)
+- [Innovation at the boundaries](/innovation-at-the-boundaries)
 - [Build for you](/build-for-you)
 - [Stability](/stability)
 
