Add table of contents post

--- a/pages/writing.mdx
+++ b/pages/writing.mdx
@@ -25,6 +25,7 @@ usually it's technical.
 ## Tutorial
 
 - [Creating a minimalist docs site with Gatsby and MDX](/creating-a-minimalist-docs-site-with-gatsby-and-mdx)
+- [Creating a table of contents component with Gatsby and MDX](/mdx-table-of-contents-components-in-gatsby)
 - [Publishing Gatsby starters from a monorepo](/publishing-gatsby-starters-from-monorepo)
 - [Building a beautiful, reusable button with Styled System](/styled-system-button)
 
