Add learn with jason video

--- a/pages/videos.mdx
+++ b/pages/videos.mdx
@@ -10,6 +10,7 @@ unedited and full of me mumbling.
 
 - [Building the first Iterative Ship landing page](https://www.youtube.com/watch?v=zwsVzpU01qA)
 - [Building randoma11y, a color voting app](https://www.youtube.com/watch?v=garQJiJUxwk)
+- [Build a Gatsby Theme - Learn With Jason](https://www.youtube.com/watch?v=PS2784YfPpw)
 
 ---
 
