Add egghead section

--- a/pages/videos.mdx
+++ b/pages/videos.mdx
@@ -12,6 +12,11 @@ unedited and full of me mumbling.
 - [Building randoma11y, a color voting app](https://www.youtube.com/watch?v=garQJiJUxwk)
 - [Build a Gatsby Theme - Learn With Jason](https://www.youtube.com/watch?v=PS2784YfPpw)
 
----
+## [egghead](https://egghead.io/instructures/john-otander)
 
-I've begun teaching on egghead as well! [Check out my lessons &rarr;](https://egghead.io/instructors/john-otander)
+I've begun instructing on egghead, so if you are interested you can
+find them all below. They are all free!
+
+- [Theme UI](https://egghead.io/playlists/theme-ui-37644190)
+- [unified - the compiler for your content](https://egghead.io/playlists/unified-the-compiler-for-your-content-5b8ff958)
+- [See all my egghead lessons &rarr;](https://egghead.io/instructors/john-otander)
