--- a/pages/resume.mdx
+++ b/pages/resume.mdx
@@ -1,42 +1,16 @@
 # John Otander
 
-Boise, Idaho
-
 - [johnotander@gmail.com](mailto:johnotander@gmail.com)
 - [johno.com](http://www.johno.com)
 - [github.com/johno](https://github.com/johno)
 - [npmjs.org/~johno](https://www.npmjs.com/~johno)
 
-I'm a software engineer with experience in all facets of web application development. Significant expertise in web/mobile design and user experience by creating aesthetically pleasing user interfaces and intuitive interactions. Skilled at developing modern, RESTful applications with data analytics, 3rd-party API integration, and efficient database queries.
-
-My primary emphasis is the front end, where I write performant, reusable CSS/Javascript and design interfaces that are easy, and a delight, to use. I'm passionate about automation, and invest time in automating tasks by building and leveraging tooling.
-
-## Education
-
-**Boise State University, Boise ID: Bachelor of Science, May 2015**  
-_Major:_ Computer Science
-
-<br />
-
-**Montana State University, Bozeman MT: Bachelor of Arts, December 2010**  
-_Major:_ Modern Languages and Literature: Hispanic Studies  
-_Graduated with High Honors_
-
-## Skills
-
-- Full stack Ruby and Node development
-- Efficient, simple, and beautiful CSS/HTML
-- Experienced building client side apps with React and Ember
-- Ability to perform under pressure
-- Well versed in Software Development best practices
-- Astute attention to detail
-- Exceptional at writing thorough, efficient tests
-- Practitioner of unobtrusive Javascript
-- Passionate about learning new technology
-
-## Notable OSS Projects
+## Open source work
 
 - <https://github.com/mdx-js/mdx>
+- <https://github.com/system-ui/theme-ui>
+- <https://github.com/gatsbyjs/gatsby>
+- <https://github.com/unifiedjs>
 - <https://github.com/jxnblk/styled-system>
 - <https://github.com/c8r/kit>
 - <https://github.com/c8r/x0>
@@ -48,20 +22,24 @@ _Graduated with High Honors_
 
 ## Work Experience
 
-#### Gatsby, Software Engineer - Remote
+#### Gatsby, Staff Software Engineer - Remote
 
 _January 2019 - Present_
+
+Working on MDX core, `gatsby-plugin-mdx`, Gatsby Themes,
+and Theme UI in order to help pioneer the next level of
+site and app building for the web.
 
 #### Clearbit, Software Engineer - Remote
 
 _November 2016 - January 2019_
 
-Building developer friendly APIs with Ruby and JavaScript.
-Primarily focused on building out product features and the front end.
+Built developer friendly APIs with Ruby and JavaScript,
+primarily focused on building out product features and the front end.
 
 #### Compositor, Co-founder
 
-_Summer 2015 - Present_
+_Summer 2015 - January 2019_
 
 Building modern tools for designers & developers.
 
@@ -73,7 +51,7 @@ Responsible for developing and designing cloud configuration infrastructure for 
 
 #### Uceem Networks, Developer - Boise, ID
 
-_Summer 2012 - March 2014_
+_Summer 2012 - March 2014 (acquired by A10 Networks)_
 
 Responsible for developing and designing a cloud-based dashboard for network configuration and usage analytics. Leading the design of all aspects of the web application and homepage, while being an integral component of the development of the entire stack.
 
@@ -110,6 +88,29 @@ Primarily tasked with debugging large-scale information management software in C
 _Summer 2007_
 
 Primarily tasked with web development, design, and maintenance.
+
+## Education
+
+**Boise State University, Boise ID: Bachelor of Science, May 2015**  
+_Major:_ Computer Science
+
+<br />
+
+**Montana State University, Bozeman MT: Bachelor of Arts, December 2010**  
+_Major:_ Modern Languages and Literature: Hispanic Studies  
+_Graduated with High Honors_
+
+## Skills
+
+- Full stack Ruby and Node development
+- Efficient, simple, and beautiful CSS/HTML
+- Experienced building client side apps with React and Ember
+- Ability to perform under pressure
+- Well versed in Software Development best practices
+- Astute attention to detail
+- Exceptional at writing thorough, efficient tests
+- Practitioner of unobtrusive Javascript
+- Passionate about learning new technology
 
 ## Activities
 
