--- a/pages/resume.mdx
+++ b/pages/resume.mdx
@@ -2,119 +2,61 @@
 
 - [johnotander@gmail.com](mailto:johnotander@gmail.com)
 - [johno.com](http://www.johno.com)
-- [github.com/johno](https://github.com/johno)
-- [npmjs.org/~johno](https://www.npmjs.com/~johno)
 
-## Open source work
+<br />
 
-- <https://github.com/mdx-js/mdx>
-- <https://github.com/system-ui/theme-ui>
-- <https://github.com/gatsbyjs/gatsby>
-- <https://github.com/unifiedjs>
-- <https://github.com/jxnblk/styled-system>
-- <https://github.com/c8r/kit>
-- <https://github.com/c8r/x0>
-- <https://github.com/tachyons-css>
-- <https://github.com/cssstats>
-- <https://github.com/johnotander/random-a11y>
-- <https://github.com/johnotander/pixyll>
-- <https://github.com/johnotander/furtive>
+## [Gatsby](https://gatsbyjs.com)
 
-## Work Experience
-
-#### Gatsby, Staff Software Engineer - Remote
-
-_January 2019 - Present_
+Staff Software Engineer, _January 2019 - Present_
 
 Working on MDX core, `gatsby-plugin-mdx`, Gatsby Themes,
 and Theme UI in order to help pioneer the next level of
 site and app building for the web.
 
-#### Clearbit, Software Engineer - Remote
+<br />
 
-_November 2016 - January 2019_
+## [Clearbit](https://clearbit.com)
+
+Software Engineer, _November 2016 - January 2019_
 
 Built developer friendly APIs with Ruby and JavaScript,
 primarily focused on building out product features and the front end.
 
-#### Compositor, Co-founder
+<br />
 
-_Summer 2015 - January 2019_
+## [Compositor](https://compositor.io)
+
+Co-founder, _Summer 2015 - January 2019_
 
 Building modern tools for designers & developers.
 
-#### A10 Networks, Senior Software Engineer - Boise, ID
+<br />
 
-_March 2014 - November 2016_
+## [A10 Networks](https://a10networks.com)
+
+Senior Software Engineer, _March 2014 - November 2016_
 
 Responsible for developing and designing cloud configuration infrastructure for network appliances, including web apps, API design, and asset optimization. Tasked with developing an internal front end framework (Bootstrap wrapper) for all web products. Primary technologies: Ruby on Rails, Javascript, Gulp, Node, Ember, CSS, SCSS, Jekyll, and HTML.
 
-#### Uceem Networks, Developer - Boise, ID
+<br />
 
-_Summer 2012 - March 2014 (acquired by A10 Networks)_
+## Uceem Networks
+
+Software Engineer, _Summer 2012 - March 2014 (acquired by A10 Networks)_
 
 Responsible for developing and designing a cloud-based dashboard for network configuration and usage analytics. Leading the design of all aspects of the web application and homepage, while being an integral component of the development of the entire stack.
 
-Duties and Responsibilities
+<br />
 
-- Leading the design and implementation of a beautiful dashboard and user interface
-- Full stack Ruby on Rails development, from server configuration to button placement
-- Payment and billing integration, ensuring PCI compliance
-- Developing a RESTy API for internal resources and end users
-- Integration with 3rd-party APIs
-- Continuous open source contributions to relevant libraries and gems
-- Collaborating and coordinating with a small, nimble team
+## Additional work experience
 
-#### Margin.io, Co-founder - Boise, ID
-
-_Summer 2013 - Present_
-
-Lead developer/designer for a web application consultancy with clients that include a startup from the Silicon Valley. Tasks include managing, coordinating, and collaborating with a development team, delivering contracts on a strict deadline, and ensuring company-wide adherence to coding best practices.
-
-#### Freelance Web Design/Development - Boise, ID
-
-_Summer 2010 - Summer 2012_
-
-Designed custom, static websites with clean, responsive CSS, HTML, and Javascript/JQuery.
-
-#### Computers Unlimited, Intern - Bozeman, MT
-
-_Summer 2009_
-
-Primarily tasked with debugging large-scale information management software in C#, SQL, Synergy, and converting antiquated procedural code to a new, Object-Oriented software system.
-
-#### Hauser Architects, Intern - San Francisco, CA
-
-_Summer 2007_
-
-Primarily tasked with web development, design, and maintenance.
-
-## Education
-
-**Boise State University, Boise ID: Bachelor of Science, May 2015**  
-_Major:_ Computer Science
+- **Freelance Web Design/Development (_Summer 2010 - Summer 2012_)**
+- **Computers Unlimited, Intern (_Summer 2009_)**
+- **Hauser Architects, Intern (_Summer 2007_)**
 
 <br />
 
-**Montana State University, Bozeman MT: Bachelor of Arts, December 2010**  
-_Major:_ Modern Languages and Literature: Hispanic Studies  
-_Graduated with High Honors_
+## Education
 
-## Skills
-
-- Full stack Ruby and Node development
-- Efficient, simple, and beautiful CSS/HTML
-- Experienced building client side apps with React and Ember
-- Ability to perform under pressure
-- Well versed in Software Development best practices
-- Astute attention to detail
-- Exceptional at writing thorough, efficient tests
-- Practitioner of unobtrusive Javascript
-- Passionate about learning new technology
-
-## Activities
-
-- Open source contributor
-- Avid outdoor enthusiast - skiing, climbing, running, cycling
-- Bronco Appathon 2013, 2nd Place Team
-- Studied abroad in Costa Rica (Universidad Veritas)
+- **Boise State University, Boise ID** B.S. Computer Science <br />
+- **Montana State University, Bozeman MT** B.A. Hispanic Studies & Minor in Computer Science with High Honors
