--- a/pages/resume.mdx
+++ b/pages/resume.mdx
@@ -5,38 +5,35 @@
 
 <br />
 
-## [Gatsby](https://gatsbyjs.com)
+## Gatsby
 
 Staff Software Engineer, _January 2019 - Present_
 
 Working on MDX core, `gatsby-plugin-mdx`, Gatsby Themes,
-and Theme UI in order to help pioneer the next level of
-site and app building for the web.
+and Theme UI in order to help pioneer a new era of web
+development. Primary technologies are React/GraphQL/Node.
 
 <br />
 
-## [Clearbit](https://clearbit.com)
+## Clearbit
 
 Software Engineer, _November 2016 - January 2019_
 
-Built developer friendly APIs with Ruby and JavaScript,
-primarily focused on building out product features and the front end.
+Built developer friendly APIs at scale. Primarily focused
+on building out product features, new apps, interactive
+marketing pages, and front end architecture.
 
 <br />
 
-## [Compositor](https://compositor.io)
-
-Co-founder, _Summer 2015 - January 2019_
-
-Building modern tools for designers & developers.
-
-<br />
-
-## [A10 Networks](https://a10networks.com)
+## A10 Networks
 
 Senior Software Engineer, _March 2014 - November 2016_
 
-Responsible for developing and designing cloud configuration infrastructure for network appliances, including web apps, API design, and asset optimization. Tasked with developing an internal front end framework (Bootstrap wrapper) for all web products. Primary technologies: Ruby on Rails, Javascript, Gulp, Node, Ember, CSS, SCSS, Jekyll, and HTML.
+Responsible for developing and designing cloud configuration
+infrastructure for network appliances, including web apps,
+API design, and asset optimization. Built a design system.
+Primary technologies were Ruby on Rails, CSS(Bootstrap/Tachyons),
+and JavaScript(Ember).
 
 <br />
 
@@ -44,15 +41,19 @@ Responsible for developing and designing cloud configuration infrastructure for 
 
 Software Engineer, _Summer 2012 - March 2014 (acquired by A10 Networks)_
 
-Responsible for developing and designing a cloud-based dashboard for network configuration and usage analytics. Leading the design of all aspects of the web application and homepage, while being an integral component of the development of the entire stack.
+Responsible for developing and designing a cloud-based dashboard
+for network configuration and usage analytics. Leading the design
+of all aspects of the web application and homepage, while being
+an integral component of the development of the entire stack.
+Primary technology was Ruby on Rails.
 
 <br />
 
 ## Additional work experience
 
 - **Freelance Web Design/Development (_Summer 2010 - Summer 2012_)**
-- **Computers Unlimited, Intern (_Summer 2009_)**
-- **Hauser Architects, Intern (_Summer 2007_)**
+- **Computers Unlimited, Software Engineering Intern (_Summer 2009_)**
+- **Hauser Architects, Web Developer Intern (_Summer 2007_)**
 
 <br />
 
