Use proper degree name

--- a/pages/resume.mdx
+++ b/pages/resume.mdx
@@ -60,4 +60,4 @@ Primary technology was Ruby on Rails.
 ## Education
 
 - **Boise State University, Boise ID** B.S. Computer Science <br />
-- **Montana State University, Bozeman MT** B.A. Hispanic Studies & Minor in Computer Science with High Honors
+- **Montana State University, Bozeman MT** B.A. Latin American Studies & Minor in Computer Science with High Honors
