Add missing tag

--- a/content/posts/jsx-as-a-design-tool-data-structure.mdx
+++ b/content/posts/jsx-as-a-design-tool-data-structure.mdx
@@ -8,6 +8,7 @@ tags:
   - theme-ui
   - technology
   - design
+  - design-tools
 ---
 
 Right now importing and exporting from design tools is full of friction. Formats are always drastically different and require transformation (if that’s even possible). Additionally, some of the leading tools closing in on the gap between design tooling and code only work in one direction, typically writing out to code as an export. This isn’t realistic in the long term.
