--- a/content/posts/candle.mdx
+++ b/content/posts/candle.mdx
@@ -11,7 +11,7 @@ tags:
 In Frank Chimero's book, [Shape of Design](https://shapeofdesignbook.com/chapters/03-improvisation-and-limitations/),
 I came across a haiku by Yosa Buson that really struck me.
 
-> _Lighting one candle_ <br /> > _with another candle—_ <br /> > _spring evening._
+> _Lighting one candle_ <br /> _with another candle—_ <br /> _spring evening._
 >
 > _— Yosa Buson_
 
