Add link to end of post

--- a/content/posts/egghead.mdx
+++ b/content/posts/egghead.mdx
@@ -35,3 +35,5 @@ I've been impressed with how helpful the entire egghead
 team is, too. I'm not one to typically put myself out there
 and do things like screencasting so they've been great
 on making sure my lessons adhere to the "egghead style".
+
+[Check out my egghead lessons &rarr;](https://egghead.io/instructors/john-otander).
