--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -14,6 +14,7 @@ usually it's technical.
 - [Innovation at the boundaries](/innovation-at-the-boundaries)
 - [Build for you](/build-for-you)
 - [Stability](/stability)
+- [Organizing posts](/organizing-posts)
 
 ## Technical
 
