--- a/content/posts/organizing-posts.mdx
+++ b/content/posts/organizing-posts.mdx
@@ -20,7 +20,7 @@ my mood. It's fluid.
 
 > Stop using pagination on your blogs
 >
-> &emdash; [Chris Biscardi](https://twitter.com/chrisbiscardi/status/1172527924945096706)
+> &mdash; [Chris Biscardi](https://twitter.com/chrisbiscardi/status/1172527924945096706)
 
 There are three primary "index pages" on my blog. The first
 is the main, hand curated writing page. The second is the archive
