Tweak home page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,10 +4,29 @@ export default Layout
 # Hello, I'm [John](/about)
 
 I'm a web developer and designer that builds things. Lots of things.
+I've built a few popular open source projects like [MDX](https://mdxjs.com),
+[CSS Stats](https://cssstats.com) and [Tachyons](https://tachyons.io).
+I'm also working on [Components AI](https://components.ai) since I'm
+extremely interested in generative design and its implications for
+traditional design tools.
 
-I also [write a lot](/writing).
+I work at [Gatsby](https://gatsbyjs.com) helping to pioneer
+a new era for building things on the web.
 
-Check out my projects on [GitHub][gh] or follow me on [Twitter][tw].
+- [Writing](/writing)
+- [About](/about)
+- [GitHub][gh]
+- [Twitter][tw]
+- [Videos](/videos)
+- [Resume](/resume)
+
+<br /><br />
+
+---
+
+<br />< br />
+
+✌️ I'm not currently looking for new opportunities.
 
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
