Add link to writing page

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -6,9 +6,10 @@ export default Layout
 I write about things that I'm thinking about. Sometimes it's personal, but
 usually it's technical.
 
+- [JSX as a design tool data structure](/jsx-as-a-design-tool-data-structure)
 - [Styling themes](/styling-themes)
-- [Presentational Context](/presentational-context)
-- [Latent Component Shadowing](/latent-component-shadowing)
+- [Presentational context](/presentational-context)
+- [Latent dhadowing](/latent-component-shadowing)
 - [Guessable](/guessable)
 - [Authorable format](/authorable-format)
 - [Innovation at the boundaries](/innovation-at-the-boundaries)
