--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -9,7 +9,7 @@ usually it's technical.
 - [JSX as a design tool data structure](/jsx-as-a-design-tool-data-structure)
 - [Styling themes](/styling-themes)
 - [Presentational context](/presentational-context)
-- [Latent dhadowing](/latent-component-shadowing)
+- [Latent shadowing](/latent-component-shadowing)
 - [Guessable](/guessable)
 - [Authorable format](/authorable-format)
 - [Innovation at the boundaries](/innovation-at-the-boundaries)
