Add unified to home page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,12 +6,13 @@ export default Layout
 I'm a web developer and designer that builds things. Lots of things.
 I've built a few popular open source projects like [MDX](https://mdxjs.com),
 [CSS Stats](https://cssstats.com) and [Tachyons](https://tachyons.io).
-I'm also working on [Components AI](https://components.ai) since I'm
+I'm part of the [unified collective](https://unifiedjs.com) and
+I'm also working on [Components AI](https://components.ai). I'm
 extremely interested in generative design and its implications for
 traditional design tools.
 
-I work at [Gatsby](https://gatsbyjs.com) helping to pioneer
-a new era for building things on the web.
+I work at [Gatsby](https://gatsbyjs.com) helping to build a new
+presentation layer for the web.
 
 - [Writing](/writing)
 - [About](/about)
