Add blocks links

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,7 +4,8 @@ export default Layout
 # Hello, I'm [John](/about)
 
 I'm a web developer and designer that builds things. Lots of things.
-I've built a few popular open source projects like [MDX](https://mdxjs.com),
+I've built a few popular open source projects like
+[Blocks](https://blocks-ui.com), [MDX](https://mdxjs.com),
 [CSS Stats](https://cssstats.com) and [Tachyons](https://tachyons.io).
 I'm part of the [unified collective](https://unifiedjs.com) and
 I'm also working on [Components AI](https://components.ai). I'm
