--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,6 +13,7 @@ Especially things that blur the lines between design and development. I 🖤 com
 #### Check out what I'm working on
 
 - [MDX][mdx]
+- [Blocks](https://blocks-ui.com)
 - [Gatsby][gatsby]
 - [Theme UI](https://theme-ui.com)
 - [Components AI](https://components.ai)
