--- a/content/posts/markdown-graph.mdx
+++ b/content/posts/markdown-graph.mdx
@@ -85,7 +85,7 @@ This would allow queries that might look like:
 }
 ```
 
-I've also been doing something thinking about how to build
+I've also been doing some thinking about how to build
 a ["local first"](https://www.inkandswitch.com/local-first.html)
 version of Markdown graphs. Hypothetically a UUID could
 be added to the frontmatter. This would be able to be connected
