Update writing index

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -16,10 +16,12 @@ usually it's technical.
 - [Build for you](/build-for-you)
 - [Stability](/stability)
 - [Organizing posts](/organizing-posts)
+- [The JavaScript Function constructor](/function-constructor)
 
 ## Technical
 
 - [unified handbook - Primer on the unified ecosystem, ASTs, and compilers](https://github.com/unifiedjs/handbook)
+- [Add a prop to JSX elements with Babel](/add-a-prop-to-jsx-elements-with-babel)
 - [Appending and prepending to JavaScript files with Babel](/appending-and-prepending-with-babel)
 - [React Hooks and stale state](/react-hooks-stale-state)
 - [Generating code and the webpack loader](/generating-code-webpack-loader)
