--- a/content/posts/styling-themes.mdx
+++ b/content/posts/styling-themes.mdx
@@ -397,7 +397,7 @@ sites, and when combined with the MDXProvider we end up with a lot of:
 ```
 
 This approach adds a lot of friction when you want to trivially change an h1. Now you're forced to write a
-funcion/component rather than editing a JS object (which would be more preferable here).
+function/component rather than editing a JS object (which would be more preferable here).
 
 **Advantages**
 
