Add newsletter signup

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -9,19 +9,20 @@ Especially things that blur the lines between design and development. I 🖤 com
 
 - [GitHub][gh]
 - [Twitter][tw]
+- [Newsletter](/newsletter)
 
 #### Check out what I'm working on
 
-- [MDX][mdx]
 - [Blocks](https://blocks-ui.com)
+- [MDX][mdx]
 - [Gatsby][gatsby]
+- [Compilers for Humans](https://compilersforhumans.com)
 - [Theme UI](https://theme-ui.com)
 - [Components AI](https://components.ai)
-- [Blocks](https://mdx-blocks.com)
+- [Screencasts](/video)
 - [Styled System][sys]
 - [Random A11y][rand]
 - [CSS Stats][css]
-- [egghead lessons][egghead]
 - [... and other stuff][gh]
 
 [gh]: https://github.com/johno
@@ -34,4 +35,3 @@ Especially things that blur the lines between design and development. I 🖤 com
 [std]: https://github.com/standard-components
 [rand]: https://github.com/johno/random-a11y
 [css]: https://cssstats.com
-[egghead]: https://egghead.io/instructors/john-otander
