--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,16 +1,20 @@
 import Layout from '../components/layout'
-export default Layout
+export default props => <Layout skipSubscribe={true} {...props} />
 
 # Hello, I'm [John](/about)
 
 I'm a web developer and designer that builds things. Lots of things.
-I've built a few popular open source projects like
+I focus on improving design/developer tooling and making it more
+approachable to build websites and applications.
+
+I've built a few popular open source projects including
 [Blocks](https://blocks-ui.com), [MDX](https://mdxjs.com),
-[CSS Stats](https://cssstats.com) and [Tachyons](https://tachyons.io).
+[Tachyons](https://tachyons.io), and [CSS Stats](https://cssstats.com).
+
 I'm part of the [unified collective](https://unifiedjs.com) and
-I'm also working on [Components AI](https://components.ai). I'm
-extremely interested in generative design and its implications for
-traditional design tools.
+I'm building [Components AI](https://components.ai) in my spare time.
+I'm also creating a course, [Compilers for Humans](https://compilersforhumans)
+that seeks to show you that compilers aren't magic.
 
 I work at [Gatsby](https://gatsbyjs.com) helping to build a new
 presentation layer for the web.
@@ -19,10 +23,12 @@ presentation layer for the web.
 - [About](/about)
 - [GitHub][gh]
 - [Twitter][tw]
+- [Newsletter](/newsletter)
 - [Videos](/videos)
 - [Resume](/resume)
 
-<br /><br />
+<br />
+<br />
 
 ---
 
