--- a/src/pages/newsletter.mdx
+++ b/src/pages/newsletter.mdx
@@ -11,7 +11,7 @@ you can sign up for my newsletter. As a subscriber, you'll:
 - **get access to exclusive content** that I don't publish publically.
   Some things are more reflective or personal, so I don't share it
   on my site. However, I'll happily share it with you.
-- **take a peak at projects** that I'm working on. When a
+- **take a peek at projects** that I'm working on. When a
   project is in its early stages I don't always open source the
   code right away. However, there's usually a public link somewhere
   I'll share with you so you can play around.
