Add a reading list

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,6 +25,10 @@ Especially things that blur the lines between design and development. I 🖤 com
 - [CSS Stats][css]
 - [... and other stuff][gh]
 
+#### What I'm reading
+
+- [2020](/reading/2020)
+
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
 [gatsby]: https://gatsbyjs.org
