--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,9 +25,10 @@ Especially things that blur the lines between design and development. I 🖤 com
 - [CSS Stats][css]
 - [... and other stuff][gh]
 
-#### What I'm reading
+#### Other links
 
-- [2020](/reading/2020)
+- [What I'm up to in January, 2020](/now)
+- [Reading list](/reading/2020)
 
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
