Add link to tags page

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -3,8 +3,8 @@ export default Layout
 
 # Writing
 
-I write about things that I'm thinking about. Sometimes it's personal, but
-usually it's technical.
+I write posts on what I'm thinking about. Sometimes it's personal, but
+usually it's technical or even theoretical.
 
 - [JSX as a design tool data structure](/jsx-as-a-design-tool-data-structure)
 - [Styling themes](/styling-themes)
@@ -39,4 +39,5 @@ usually it's technical.
 
 <div style={{ marginTop: '100px' }} />
 
-[See all posts &rarr;](/writing/archives)
+[See all posts &rarr;](/writing/archives) <br />
+[See posts by tag &rarr;](/writing/tags)
