--- a/content/posts/function-constructor.mdx
+++ b/content/posts/function-constructor.mdx
@@ -166,7 +166,7 @@ Now, you can use JSX code:
 
 Using the `Function` constructor with a babel transform is
 a powerful way to build your own in-browser playground.
-At its core, this is a strategy we us in
+At its core, this is a strategy we use in
 [Blocks](https://github.com/blocks/blocks/blob/9438282b7a4d648322493c94573522bbbfe5f3dd/packages/blocks-ui/src/inline-render.js)
 as well.
 
