--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,10 @@
 import Layout from '../components/layout'
 export default props => <Layout skipSubscribe={true} {...props} />
 
-# Hello, I'm [John](/about)
+# Hello, I'm John Otander
+
+You can usually find me on the internet as
+[johno][gh] or [4lpine][tw].
 
 I'm a web developer and designer that builds things. Lots of things.
 I focus on improving design/developer tooling and making it more
