Add tweak to yarn post

--- a/content/posts/yarn.mdx
+++ b/content/posts/yarn.mdx
@@ -25,6 +25,15 @@ I wasn't keen on.
 - I didn't like that the commands subtly changed
 - I'm very critical of changing important parts of my workflow
 
+## Considerations always on my mind
+
+npm being a VC funded company that was shipped as part of
+node was always precarious. It became even more so when
+innovation stagnated and it became apparent it was no
+longer a "nice people matter" type of company.
+
+So, I somehow, began to trust Facebook more (WTF?).
+
 ## When my opinion began to change
 
 However, after many years building packages in the node
