Fix broken link to Compilers for Humans

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,7 +16,7 @@ I've built a few popular open source projects including
 
 I'm part of the [unified collective](https://unifiedjs.com) and
 I'm building [Components AI](https://components.ai) in my spare time.
-I'm also creating a course, [Compilers for Humans](https://compilersforhumans)
+I'm also creating a course, [Compilers for Humans](https://compilersforhumans.com)
 that seeks to show you that compilers aren't magic.
 
 I work at [Gatsby](https://gatsbyjs.com) helping to build a new
